force-app/main/default/objects/Product2/fields/Amazon_Sku__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Sku__c</fullName>
    <description>Holds any applicable amazon sku number</description>
    <label>Amazon Sku</label>
    <length>40</length>
    <type>Text</type>
</CustomField>