force-app/main/default/objects/Product2/fields/Attribute_Setup__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Setup__c</fullName>
    <label>Attribute Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending - Physical Good</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending - Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>