force-app/main/default/objects/Product2/fields/Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>Base_Cost__c</fullName>
    <label>Base Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>