force-app/main/default/objects/Product2/fields/Card_Template__c.field-meta.xml
<CustomField>
    <fullName>Card_Template__c</fullName>
    <description>Captures the card template used for this course product.</description>
    <inlineHelpText>Indicates the card template used for this course product.</inlineHelpText>
    <label>Card Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Non-Eval Card</fullName>
            </value>
            <value>
                <fullName>Standard Non-Eval No Expiry Card</fullName>
            </value>
            <value>
                <fullName>Standard Eval Card</fullName>
            </value>
            <value>
                <fullName>Standard Eval No Expiry Card</fullName>
            </value>
            <value>
                <fullName>Standard Eval No Details Card</fullName>
            </value>
            <value>
                <fullName>Standard Eval Aerial Card</fullName>
            </value>
            <value>
                <fullName>Standard Eval Aerial No Expiry Card</fullName>
            </value>
            <value>
                <fullName>Respirator Awareness And Fitting Card</fullName>
            </value>
            <value>
                <fullName>TDG Card Front</fullName>
            </value>
            <value>
                <fullName>Arial Lift Eval Card No Expiry Date</fullName>
                <isActive>false</isActive>
                <label>Arial Lift Eval Card No Expiry Date</label>
            </value>
            <value>
                <fullName>Bucket Truck Card</fullName>
                <isActive>false</isActive>
                <label>Bucket Truck Card</label>
            </value>
            <value>
                <fullName>Bucket Truck Eval Card</fullName>
                <isActive>false</isActive>
                <label>Bucket Truck Eval Card</label>
            </value>
            <value>
                <fullName>ESA 2side card</fullName>
                <isActive>false</isActive>
                <label>ESA 2side card</label>
            </value>
            <value>
                <fullName>Electric Pallet Truck Card</fullName>
                <isActive>false</isActive>
                <label>Electric Pallet Truck Card</label>
            </value>
            <value>
                <fullName>Eval Card</fullName>
                <isActive>false</isActive>
                <label>Eval Card</label>
            </value>
            <value>
                <fullName>LO 2side Card</fullName>
                <isActive>false</isActive>
                <label>LO 2side Card</label>
            </value>
            <value>
                <fullName>Lift Truck Eval Card</fullName>
                <isActive>false</isActive>
                <label>Lift Truck Eval Card</label>
            </value>
            <value>
                <fullName>Lift Truck Eval Card - No Theory Date</fullName>
                <isActive>false</isActive>
                <label>Lift Truck Eval Card - No Theory Date</label>
            </value>
            <value>
                <fullName>Lift Truck Refresher Card</fullName>
                <isActive>false</isActive>
                <label>Lift Truck Refresher Card</label>
            </value>
            <value>
                <fullName>Overhead Crane Eval Card</fullName>
                <isActive>false</isActive>
                <label>Overhead Crane Eval Card</label>
            </value>
            <value>
                <fullName>Overhead Crane Eval Card - No Theory Date</fullName>
                <isActive>false</isActive>
                <label>Overhead Crane Eval Card - No Theory Date</label>
            </value>
            <value>
                <fullName>Respirator Awareness And Fitting card - No Expiry Date</fullName>
                <isActive>false</isActive>
                <label>Respirator Awareness And Fitting card - No Expiry Date</label>
            </value>
            <value>
                <fullName>Skid Steer Card</fullName>
                <isActive>false</isActive>
                <label>Skid Steer Card</label>
            </value>
            <value>
                <fullName>Standard Card</fullName>
                <isActive>false</isActive>
                <label>Standard Card</label>
            </value>
            <value>
                <fullName>Standard Card No Expiry Date</fullName>
                <isActive>false</isActive>
                <label>Standard Card No Expiry Date</label>
            </value>
            <value>
                <fullName>Standard Card-Cable Control Systems Inc.</fullName>
                <isActive>false</isActive>
                <label>Standard Card-Cable Control Systems Inc.</label>
            </value>
            <value>
                <fullName>Standard Card-Genivar CSEA&amp;FPPR</fullName>
                <isActive>false</isActive>
                <label>Standard Card-Genivar CSEA&amp;FPPR</label>
            </value>
            <value>
                <fullName>Standard Wallet Card</fullName>
                <isActive>false</isActive>
                <label>Standard Wallet Card</label>
            </value>
            <value>
                <fullName>THE Card</fullName>
                <isActive>false</isActive>
                <label>THE Card</label>
            </value>
            <value>
                <fullName>WHMIS Card</fullName>
                <isActive>false</isActive>
                <label>WHMIS Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>