force-app/main/default/objects/Product2/fields/Certificate_Length__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Length__c</fullName>
    <description>Captures the number of years a certificate can last for.</description>
    <inlineHelpText>Indicates the number of years a certificate can last for.</inlineHelpText>
    <label>Certificate Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>