force-app/main/default/objects/Product2/fields/Certificate_Template__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Template__c</fullName>
    <description>Captures the certificate template used for this course product.</description>
    <inlineHelpText>Indicates the certificate template used for this course product.</inlineHelpText>
    <label>Certificate Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lift Device TTT Wall Certificate</fullName>
            </value>
            <value>
                <fullName>Basic Wall Certificate</fullName>
            </value>
            <value>
                <fullName>Theory Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>