force-app/main/default/objects/Product2/fields/Commission_Offset__c.field-meta.xml
<CustomField>
    <fullName>Commission_Offset__c</fullName>
    <defaultValue>0.66</defaultValue>
    <label>Commission Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>