force-app/main/default/objects/Product2/fields/Course_Material__c.field-meta.xml
<CustomField>
    <fullName>Course_Material__c</fullName>
    <description>Captures the materials that come with this course. Used for Course records. Does not reduce from Current Inventory Count.</description>
    <inlineHelpText>Indicates the materials that come with this course. Used for Course records. Does not reduce from Current Inventory Count.</inlineHelpText>
    <label>Course Material</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>