force-app/main/default/objects/Product2/fields/Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Course_Product_Line__c</fullName>
    <description>Captures the product line for the Product.</description>
    <inlineHelpText>Indicates the product line.</inlineHelpText>
    <label>Course Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1STA</fullName>
            </value>
            <value>
                <fullName>1STA2</fullName>
            </value>
            <value>
                <fullName>1STAR</fullName>
            </value>
            <value>
                <fullName>2016OOHSAR</fullName>
            </value>
            <value>
                <fullName>2017OOHSAR</fullName>
            </value>
            <value>
                <fullName>2018OOHSAR</fullName>
            </value>
            <value>
                <fullName>2019OOHSAR</fullName>
            </value>
            <value>
                <fullName>2020OOHSAR</fullName>
            </value>
            <value>
                <fullName>2021OOHSAR</fullName>
            </value>
            <value>
                <fullName>2022OOHSAR</fullName>
            </value>
            <value>
                <fullName>2023OOHSAR</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>4KSTEWI</fullName>
            </value>
            <value>
                <fullName>5LSAN4</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AEDP</fullName>
            </value>
            <value>
                <fullName>AEDT</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AHA</fullName>
            </value>
            <value>
                <fullName>AHATTT</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AIDAPRSS</fullName>
            </value>
            <value>
                <fullName>AIET</fullName>
            </value>
            <value>
                <fullName>AITTT</fullName>
            </value>
            <value>
                <fullName>AMME1</fullName>
            </value>
            <value>
                <fullName>AODA</fullName>
            </value>
            <value>
                <fullName>AODATTT</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>ASB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>