force-app/main/default/objects/Product2/fields/CPD_Hours__c.field-meta.xml
<CustomField>
    <fullName>CPD_Hours__c</fullName>
    <description>Captures the number of CPD Hours.</description>
    <inlineHelpText>Indicates the number of CPD Hours.</inlineHelpText>
    <label>CPD Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>