force-app/main/default/objects/Product2/fields/Current_Inventory_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Inventory_Count__c</fullName>
    <description>Captures the current inventory count.</description>
    <inlineHelpText>Indicates the current inventory count.</inlineHelpText>
    <label>Current Inventory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>