force-app/main/default/objects/Product2/fields/Customized_Product__c.field-meta.xml
<CustomField>
    <fullName>Customized_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if a Product needs customized material.</description>
    <inlineHelpText>Indicates if a Product needs customized material.</inlineHelpText>
    <label>Customized Product</label>
    <type>Checkbox</type>
</CustomField>