force-app/main/default/objects/Product2/fields/Deliver_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver Immediately</label>
    <type>Checkbox</type>
</CustomField>