force-app/main/default/objects/Product2/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Captures the delivery method for the Product.</description>
    <inlineHelpText>Indicates the delivery method for the Product.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Train-the-Trainer</fullName>
                <isActive>false</isActive>
                <label>Train-the-Trainer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>