force-app/main/default/objects/Product2/fields/Devices__c.field-meta.xml
<CustomField>
    <fullName>Devices__c</fullName>
    <label>Devices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Articulated</fullName>
            </value>
            <value>
                <fullName>Articulated Boom Lift</fullName>
            </value>
            <value>
                <fullName>Bucket Truck</fullName>
            </value>
            <value>
                <fullName>Burden Carrier</fullName>
            </value>
            <value>
                <fullName>Cable Boom</fullName>
            </value>
            <value>
                <fullName>Cab Operated</fullName>
            </value>
            <value>
                <fullName>Carry Deck</fullName>
            </value>
            <value>
                <fullName>Combi Lift</fullName>
            </value>
            <value>
                <fullName>Counterbalance</fullName>
            </value>
            <value>
                <fullName>Elastomeric Full Facepiece</fullName>
            </value>
            <value>
                <fullName>Elastomeric Half Facepiece</fullName>
            </value>
            <value>
                <fullName>Electric Pallet</fullName>
            </value>
            <value>
                <fullName>Filtering Facepiece</fullName>
            </value>
            <value>
                <fullName>Gantry Crane</fullName>
            </value>
            <value>
                <fullName>Half Gantry Crane</fullName>
            </value>
            <value>
                <fullName>Harness Inspection</fullName>
            </value>
            <value>
                <fullName>High Stacker</fullName>
            </value>
            <value>
                <fullName>Jib Crane</fullName>
            </value>
            <value>
                <fullName>Ladder Truck</fullName>
            </value>
            <value>
                <fullName>Lanyard Inspection</fullName>
            </value>
            <value>
                <fullName>Moffett</fullName>
            </value>
            <value>
                <fullName>Monorail</fullName>
            </value>
            <value>
                <fullName>Narrow Aisle</fullName>
            </value>
            <value>
                <fullName>Order Picker</fullName>
            </value>
            <value>
                <fullName>Overhead Bridge</fullName>
            </value>
            <value>
                <fullName>Pallet Truck</fullName>
            </value>
            <value>
                <fullName>Pneumatic Powered Crane</fullName>
            </value>
            <value>
                <fullName>Powered Air Purifying Respirator</fullName>
            </value>
            <value>
                <fullName>Rough Terrain</fullName>
            </value>
            <value>
                <fullName>Scissor Lift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>