force-app/main/default/objects/Product2/fields/Digital_Card_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Digital_Card_Program_ID__c</fullName>
    <label>Digital Card Program ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>