force-app/main/default/objects/Product2/fields/Distance_Learning__c.field-meta.xml
<CustomField>
    <fullName>Distance_Learning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distance Learning</label>
    <type>Checkbox</type>
</CustomField>