force-app/main/default/objects/Product2/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Captures the duration of the course in hours.</description>
    <inlineHelpText>Indicates the duration of the course in hours.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>