force-app/main/default/objects/Product2/fields/Evaluation_Recert_Length__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Recert_Length__c</fullName>
    <description>Captures the number of years for the recertification of the evaluation.</description>
    <inlineHelpText>Indicates the number of years for the recertification of the evaluation.</inlineHelpText>
    <label>Evaluation Recert Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>