force-app/main/default/objects/Product2/fields/Evaluation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Record_Type__c</fullName>
    <label>Evaluation Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerial Lift Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Bucket Truck Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Lift Truck Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Mobile Boom Crane Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Overhead Crane Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Respirator Fit Testing (Qualitative)</fullName>
            </value>
            <value>
                <fullName>Respirator Fit Testing (Quantitative)</fullName>
            </value>
            <value>
                <fullName>Telehandler Practical Evaluation</fullName>
            </value>
            <value>
                <fullName>Working at Heights Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>