force-app/main/default/objects/Product2/fields/External_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Name__c</fullName>
    <description>Captures the external product name to be used on quote output documents.</description>
    <inlineHelpText>Indicates the external product name to be used on quote output documents.</inlineHelpText>
    <label>External Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>