force-app/main/default/objects/Product2/fields/Extra_Seat_Price__c.field-meta.xml
<CustomField>
    <fullName>Extra_Seat_Price__c</fullName>
    <description>Captures the on-site course Product&apos;s additional material charge.</description>
    <inlineHelpText>Indicates the on-site course Product&apos;s additional material charge.</inlineHelpText>
    <label>Extra Seat Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>