force-app/main/default/objects/Product2/fields/Full_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Product_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full Product Id</label>
    <type>Text</type>
</CustomField>