force-app/main/default/objects/Product2/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Captures the industry(ies) the product is applicable for. Specific for marketing.</description>
    <inlineHelpText>Indicates the industry(ies) the product is applicable for. Specific for marketing.</inlineHelpText>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural ProductionCrops</fullName>
            </value>
            <value>
                <fullName>Agricultural ProductionLivestock</fullName>
            </value>
            <value>
                <fullName>Agricultural Services</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Fishing, Hunting, and Trapping</fullName>
            </value>
            <value>
                <fullName>Metal Mining</fullName>
            </value>
            <value>
                <fullName>Anthracite Mining</fullName>
            </value>
            <value>
                <fullName>Coal Mining</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Extraction</fullName>
            </value>
            <value>
                <fullName>Nonmetallic Mining, Except Fuels</fullName>
            </value>
            <value>
                <fullName>General Building Contractors</fullName>
            </value>
            <value>
                <fullName>Heavy Constructions, Except Building</fullName>
            </value>
            <value>
                <fullName>Special Trade Contractors</fullName>
            </value>
            <value>
                <fullName>Food and Kindred Products</fullName>
            </value>
            <value>
                <fullName>Tobacco Products</fullName>
            </value>
            <value>
                <fullName>Textile Mill Products</fullName>
            </value>
            <value>
                <fullName>Apparel/Other Textile Products</fullName>
            </value>
            <value>
                <fullName>Lumber and Wood Products</fullName>
            </value>
            <value>
                <fullName>Furniture and Fixtures</fullName>
            </value>
            <value>
                <fullName>Paper and Allied Products</fullName>
            </value>
            <value>
                <fullName>Printing and Publishing</fullName>
            </value>
            <value>
                <fullName>Chemicals and Allied Products</fullName>
            </value>
            <value>
                <fullName>Petroleum and Coal Products</fullName>
            </value>
            <value>
                <fullName>Rubber and Miscellaneous Plastics</fullName>
            </value>
            <value>
                <fullName>Leather and Leather Products</fullName>
            </value>
            <value>
                <fullName>Stone, Clay, &amp; Glass Products</fullName>
            </value>
            <value>
                <fullName>Primary Metal Industries</fullName>
            </value>
            <value>
                <fullName>Fabricated Metal Products</fullName>
            </value>
            <value>
                <fullName>Industrial Machinery &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Electronic &amp; Electric Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>