force-app/main/default/objects/Product2/fields/LearningLogin_Id__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Id__c</fullName>
    <label>LearningLogin Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>