force-app/main/default/objects/Product2/fields/Max_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Sales_Discount__c</fullName>
    <description>If has a value,</description>
    <label>Max Sales Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>