force-app/main/default/objects/Product2/fields/MaxOSCapacity_AdditionalChargeThreshold__c.field-meta.xml
<CustomField>
    <fullName>MaxOSCapacity_AdditionalChargeThreshold__c</fullName>
    <description>Captures the onsite course&apos;s maximum capacity before incurring additional charges for on-site course Products.</description>
    <inlineHelpText>Indicates the onsite course&apos;s maximum capacity before incurring additional charges for on-site course Products.</inlineHelpText>
    <label>MaxOSCapacity(AdditionalChargeThreshold)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>