force-app/main/default/objects/Product2/fields/Pay_Commission__c.field-meta.xml
<CustomField>
    <fullName>Pay_Commission__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pay Commission</label>
    <type>Checkbox</type>
</CustomField>