force-app/main/default/objects/Product2/fields/Physical_Good_Type__c.field-meta.xml
<CustomField>
    <fullName>Physical_Good_Type__c</fullName>
    <description>Captures the type of physical good of the Product.</description>
    <inlineHelpText>Indicates the type of physical good of the Product.</inlineHelpText>
    <label>Physical Good Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>