force-app/main/default/objects/Product2/fields/ProdName_Legacy__c.field-meta.xml
<CustomField>
    <fullName>ProdName_Legacy__c</fullName>
    <description>Captures the legacy product name to be used for data migration/naming purposes.</description>
    <inlineHelpText>Indicates the legacy product name to be used for data migration/naming purposes.</inlineHelpText>
    <label>ProdName_Legacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>