force-app/main/default/objects/Product2/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>Displays Product Id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Product Id</inlineHelpText>
    <label>Product_Id</label>
    <type>Text</type>
</CustomField>