force-app/main/default/objects/Product2/fields/Product_Outline__c.field-meta.xml
<CustomField>
    <fullName>Product_Outline__c</fullName>
    <description>Captures the product outline details used on the website.</description>
    <inlineHelpText>Indicates the product outline details used on the website.</inlineHelpText>
    <label>Product Outline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>