force-app/main/default/objects/Product2/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>Captures the product summary details used on the website.</description>
    <inlineHelpText>Indicates the product summary details used on the website.</inlineHelpText>
    <label>Product Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>