force-app/main/default/objects/Product2/fields/Recurring_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, will generate an automatic billing date on order products</inlineHelpText>
    <label>Recurring Invoice</label>
    <type>Checkbox</type>
</CustomField>