force-app/main/default/objects/Product2/fields/Recurring_Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Invoice_Frequency__c</fullName>
    <label>Recurring Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recurring_Invoice_Frequency</valueSetName>
    </valueSet>
</CustomField>