force-app/main/default/objects/Product2/fields/Requires_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if the theory course Product also has an evaluation component associated with it.</description>
    <inlineHelpText>Indicates if the theory course Product also has an evaluation component associated with it.</inlineHelpText>
    <label>Requires Evaluation</label>
    <type>Checkbox</type>
</CustomField>