force-app/main/default/objects/Product2/fields/Requires_Final_Test__c.field-meta.xml
<CustomField>
    <fullName>Requires_Final_Test__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Final Test</label>
    <type>Checkbox</type>
</CustomField>