force-app/main/default/objects/Product2/fields/Requires_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Requires_Shipping__c</fullName>
    <description>Captures if the product requires shipping.</description>
    <inlineHelpText>Indicates if the product requires shipping.</inlineHelpText>
    <label>Requires Shipping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>